Use Authorizer in SessionProxy.
